# catalog_matcher

./: .gitignore  README.md  contexto.md  pyproject.toml
Docs/: requirement_definitions.md
Docs/definitions/domain/: 1_catalog_entity.md
app/application/: constants.py
app/application/dto/: catalog_list_dto.py  match_dtos.py
app/application/exceptions/: application_layer_exception.py  catalog_normalization_exception.py  empty_requirement_file_exception.py  requirement_normalization_exception.py
app/application/normalizers/: catalog_normalizer.py  requirements_normalizer.py
app/application/ports/: catalog_repository.py  embedding_service.py  file_reader.py  normalizer.py
app/application/use_cases/: append_catalog.py  get_catalog_info.py  list_catalog_items.py  load_catalog.py  match_requirements.py  upsert_catalog.py
app/domain/entities/: catalog.py  catalog_item.py
app/domain/exceptions/: domain_exception.py  invalid_catalog_item_exception.py
app/infrastructure/config/: __init__.py
app/infrastructure/exceptions/: __init__.py  embedding_service_exception.py  infrastructure_exception.py  vector_repository_exception.py
app/resources/templates/: catalog_template.csv  requirement_template.csv
backend/: LICENSE  catalog.csv  pyproject.toml  requirements - Copy.csv  requirements.csv
data/catalog/: catalog.csv
frontend/: eslint.config.js  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
tests/infrastructure/: test_catalog_repository_csv.py  test_embedding_service_open_ai.py  test_file_reader_csv.py  test_vector_repository_faiss.py
(+139 files in other folders)
